--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-    Theme Name: Lonely
-    Theme URL: https://bootstrapmade.com/free-html-bootstrap-template-lonely/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-*/
 /* ==== Google font ==== */
 @import url(https://fonts.googleapis.com/css?family=Varela+Round|Open+Sans:400,300,600,400italic,700);
 
@@ -38,7 +32,7 @@ h6 {
 
 blockquote {
 	font-family: Georgia, arial, sans-serif;
-	color: #bbb;
+	color: black;
 	font-size: 20px;
 }
 
